fix participant edit button alignment on chrome

--- a/src/app/participants/participants.component.scss
+++ b/src/app/participants/participants.component.scss
@@ -13,7 +13,7 @@
       vertical-align: text-bottom;
     }
     .playerSumary {
-      justify-content: right;
+      justify-content: flex-end;
       padding: 10px;
       color: rgba(255, 255, 255, 0.7) !important;
     }
